@startuml

' ===== ENUMS =====
enum UserRole {
  ADMIN
  USER
}

enum TaskStatus {
  NEW
  RUNNING
  STOPPED
  COMPLETED
  FAILED
}

enum TransactionType {
  DEPOSIT
  WITHDRAW
}

' ===== CLASSES =====
class User {
  - _id: int
  - _auth: UserAuth
  - _role: UserRole
  - _balance: Decimal
  - _created: datetime

  + deposit(amount): Transaction
  + withdraw(amount): Transaction
  + get_balance(): Decimal
}

class UserAuth {
  - _login: str
  - _pwd_hash: str
}

abstract class Model {
  - _id: int
  - _name: str
  - _description: str
  - _prediction_cost: Decimal

  + predict(request): Prediction
}

class Prediction {
  - _id: int
  - _result: any
  - _cost: Decimal
  - _created: datetime

  + get_cost(): Decimal
}

class Task {
  - _id: int
  - _user: User
  - _model: Model
  - _request: any
  - _status: TaskStatus
  - _created: datetime
  - _duration_ms: int
  - _prediction: Prediction
  - _transaction: Transaction

  + run(): void
}

class Transaction {
  - _id: UUID
  - _user: User
  - _type: TransactionType
  - _amount: Decimal
  - _balance: Decimal
  - _timestamp: datetime
}

class TaskHistory {
  - _tasks: List<Task>

  + append(task: Task): void
}

' ===== RELATIONSHIPS =====
User *-- UserAuth
User --> UserRole
User --> Transaction

Task --> User
Task --> Model
Task --> Prediction
Task --> Transaction
Task --> TaskStatus

Model --> Prediction

Transaction --> User
Transaction --> TransactionType

TaskHistory o-- Task

@enduml